statum-macros/tests/ui/invalid_transition_unknown_machine.stderr
error: Error: no `#[machine]` named `DoesNotExist` was found in module `invalid_transition_unknown_machine`.
       A struct named `DoesNotExist` exists on line 21, but it is not annotated with `#[machine]`.
       No same-named `#[machine]` items were found in other modules of this file.
       Available `#[machine]` items in this module: `Machine` in `invalid_transition_unknown_machine` (line 19).
       Help: apply `#[transition]` to an impl for the machine type generated by `#[machine]` in this module.
       Correct shape: `#[transition] impl Machine<CurrentState> { ... }` where `Machine` is declared with `#[machine]` in `invalid_transition_unknown_machine`.
  --> tests/ui/invalid_transition_unknown_machine.rs:24:6
   |
24 | impl DoesNotExist<A> {
   |      ^^^^^^^^^^^^
